# nlppen

./: .gitignore  .~Filtering sentences.ipynb  Filtering sentences.ipynb  Notebook-KOR.ipynb  Notebook.ipynb  Untitled.ipynb  Untitled1.ipynb  setup.cfg
ReporteDerechos/: Derechos acotado.xlsx  Derechos fundamental.xlsx  Derechos general.xlsx  Derechos humano.xlsx  derechos_GenXPat.xlsx  derechos_Norm.xlsx
nlppen/: Steven-Seleccion.ipynb  analisis.py  bokeh_pen.json  descripcion.py  export.py  instituciones_publicas_v2.jsonl  instrumentos_internacionales.jsonl  seleccion.py  sentencias_estructurales.py  spacy_derechos.py  spacy_entities.py  spacy_internationals.py  spark_udfs.py  visualizacion.py
nlppen/.ipynb_checkpoints/: analisis-checkpoint.py  descripcion-checkpoint.py  spark_udfs-checkpoint.py  visualizacion-checkpoint.py
nlppen/extraccion/: Natural.py  ProcessException.py  analisis.py  conversion.py  encrypt.py  errores_entidades.json  extraccion.py  modelado.py
nlppen/extraccion/.ipynb_checkpoints/: Natural-checkpoint.py  mongodb-checkpoint.py
nlppen/extraccion/models/: Keras.ipynb  Latent .ipynb  Modelos NN.ipynb  (+46 more)
notebooks/: Entidades públicas.ipynb
notebooks/ReporteExcel/: ReporteExcel.ipynb
notebooks/ReporteTecnico/: .~lock.datos.xlsx#  .~lock.estructurales_crudo[18-10-21]prev.xlsx.xlsx#  .~lock.lista_redactores.xlsx#  Datos_plazos.xlsx  EntidadesPublicas.xlsx  Reporte1.aux  Reporte1.bcf  Reporte1.ipynb  Reporte1.out  Reporte1.run.xml  Reporte1.toc  estadonacion.cls  jupynotex.py  lista_redactores.xlsx  notas.md  pen.tplx  reporte.py  test.gexf
(+62 files in other folders)
