 
[metadata]
name = nlp
description = Herramientas de análisis de texto para el Programa Estado de la Nación
long_description = file: README.md
long_description_content_type = text/markdown
url = https://estadonacion.or.cr
author = Mesa de Ciencia de Datos y Visualización
author_email = kobando@estadonacion.or.cr
license = BSD-3-Clause
license_file = LICENSE
platforms = any

[options]
package_dir = nlp
packages = find:
python_requires = >=3.7